// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should return preproduction tagged github global env 1`] = `
Object {
  "branch": "vX.Y.Z",
  "branchSlug": "vx-y-z-25jxw5",
  "environment": "vx-y-z-25jxw5",
  "isPreProduction": true,
  "isProduction": false,
  "metadata": Object {
    "annotations": Object {
      "app.github.com/job": "xxxxxxx-job",
      "app.github.com/ref": "refs/tags/vX.Y.Z",
      "app.github.com/repo": "socialgouv/sample-next-app",
      "app.github.com/run": "12345",
      "app.github.com/sha": "8843083",
    },
    "domain": "dev2.fabrique.social.gouv.fr",
    "git": Object {
      "branch": "refs/tags/vX.Y.Z",
      "remote": "socialgouv/sample-next-app",
    },
    "labels": Object {
      "application": "sample-next-app",
      "cert": "wildcard",
      "component": "sample-next-app",
      "owner": "sample-next-app",
      "team": "sample-next-app",
    },
    "namespace": Object {
      "name": "sample-next-app-preprod",
    },
    "rancherId": "c-bd7z2:p-7ms8p",
    "subdomain": "sample-next-app-preprod",
  },
  "productionNamespace": "sample-next-app",
  "projectName": "sample-next-app",
  "registry": "ghcr.io/socialgouv/sample-next-app",
  "sha": "8843083edb7f873cad1d1420731a60773594ffae",
  "shortSha": "8843083",
  "tag": "X.Y.Z",
}
`;

exports[`should return production github global env 1`] = `
Object {
  "branch": "vX.Y.Z",
  "branchSlug": "vx-y-z-25jxw5",
  "environment": "vx-y-z-25jxw5",
  "isPreProduction": false,
  "isProduction": true,
  "metadata": Object {
    "annotations": Object {
      "app.github.com/job": "xxxxxxx-job",
      "app.github.com/ref": "refs/tags/vX.Y.Z",
      "app.github.com/repo": "socialgouv/sample-next-app",
      "app.github.com/run": "12345",
      "app.github.com/sha": "8843083",
    },
    "domain": "dev2.fabrique.social.gouv.fr",
    "git": Object {
      "branch": "refs/tags/vX.Y.Z",
      "remote": "socialgouv/sample-next-app",
    },
    "labels": Object {
      "application": "sample-next-app",
      "component": "sample-next-app",
      "owner": "sample-next-app",
      "team": "sample-next-app",
    },
    "namespace": Object {
      "name": "sample-next-app",
    },
    "rancherId": "c-bd7z2:p-7ms8p",
    "subdomain": "sample-next-app",
  },
  "productionNamespace": "sample-next-app",
  "projectName": "sample-next-app",
  "registry": "ghcr.io/socialgouv/sample-next-app",
  "sha": "8843083edb7f873cad1d1420731a60773594ffae",
  "shortSha": "8843083",
  "tag": "X.Y.Z",
}
`;

exports[`should return the github global env 1`] = `
Object {
  "branch": "e2e-branch",
  "branchSlug": "e2e-branch",
  "environment": "e2e-branch",
  "isPreProduction": false,
  "isProduction": false,
  "metadata": Object {
    "annotations": Object {
      "app.github.com/job": "xxxxxxx-job",
      "app.github.com/ref": "refs/heads/e2e-branch",
      "app.github.com/repo": "socialgouv/sample-next-app",
      "app.github.com/run": "12345",
      "app.github.com/sha": "8843083",
    },
    "domain": "dev2.fabrique.social.gouv.fr",
    "git": Object {
      "branch": "refs/heads/e2e-branch",
      "remote": "socialgouv/sample-next-app",
    },
    "labels": Object {
      "application": "sample-next-app",
      "cert": "wildcard",
      "component": "sample-next-app",
      "owner": "sample-next-app",
      "team": "sample-next-app",
    },
    "namespace": Object {
      "name": "sample-next-app-e2e-branch",
    },
    "rancherId": "c-bd7z2:p-7ms8p",
    "subdomain": "sample-next-app-e2e-branch",
  },
  "productionNamespace": "sample-next-app",
  "projectName": "sample-next-app",
  "registry": "ghcr.io/socialgouv/sample-next-app",
  "sha": "8843083edb7f873cad1d1420731a60773594ffae",
  "shortSha": "8843083",
  "tag": "sha-8843083edb7f873cad1d1420731a60773594ffae",
}
`;

exports[`should return the github global env with renovate prefixed env name 1`] = `
Object {
  "branch": "renovate/major-@jest-monorepo",
  "branchSlug": "renovate-major-jest-monorepo-3qv5n7",
  "environment": "renovate-major-jest-monorepo-3qv5n7",
  "isPreProduction": false,
  "isProduction": false,
  "metadata": Object {
    "annotations": Object {
      "app.github.com/job": "xxxxxxx-job",
      "app.github.com/ref": "refs/heads/renovate/major-@jest-monorepo",
      "app.github.com/repo": "socialgouv/sample-next-app",
      "app.github.com/run": "12345",
      "app.github.com/sha": "8843083",
    },
    "domain": "dev2.fabrique.social.gouv.fr",
    "git": Object {
      "branch": "refs/heads/renovate/major-@jest-monorepo",
      "remote": "socialgouv/sample-next-app",
    },
    "labels": Object {
      "application": "sample-next-app",
      "cert": "wildcard",
      "component": "sample-next-app",
      "owner": "sample-next-app",
      "team": "sample-next-app",
    },
    "namespace": Object {
      "name": "sample-next-app-renovate-major-jest-monorepo-3qv5n7",
    },
    "rancherId": "c-bd7z2:p-7ms8p",
    "subdomain": "sample-next-app-renovate-major-jest-monorepo-3qv5n7",
  },
  "productionNamespace": "sample-next-app",
  "projectName": "sample-next-app",
  "registry": "ghcr.io/socialgouv/sample-next-app",
  "sha": "8843083edb7f873cad1d1420731a60773594ffae",
  "shortSha": "8843083",
  "tag": "sha-8843083edb7f873cad1d1420731a60773594ffae",
}
`;

exports[`should return the github global env with slugify 1`] = `
Object {
  "branch": "domifa-commander-8.x",
  "branchSlug": "domifa-commander-8-x-4k3z09",
  "environment": "domifa-commander-8-x-4k3z09",
  "isPreProduction": false,
  "isProduction": false,
  "metadata": Object {
    "annotations": Object {
      "app.github.com/job": "xxxxxxx-job",
      "app.github.com/ref": "refs/heads/domifa-commander-8.x",
      "app.github.com/repo": "socialgouv/sample-next-app",
      "app.github.com/run": "12345",
      "app.github.com/sha": "8843083",
    },
    "domain": "dev2.fabrique.social.gouv.fr",
    "git": Object {
      "branch": "refs/heads/domifa-commander-8.x",
      "remote": "socialgouv/sample-next-app",
    },
    "labels": Object {
      "application": "sample-next-app",
      "cert": "wildcard",
      "component": "sample-next-app",
      "owner": "sample-next-app",
      "team": "sample-next-app",
    },
    "namespace": Object {
      "name": "sample-next-app-domifa-commander-8-x-4k3z09",
    },
    "rancherId": "c-bd7z2:p-7ms8p",
    "subdomain": "sample-next-app-domifa-commander-8-x-4k3z09",
  },
  "productionNamespace": "sample-next-app",
  "projectName": "sample-next-app",
  "registry": "ghcr.io/socialgouv/sample-next-app",
  "sha": "8843083edb7f873cad1d1420731a60773594ffae",
  "shortSha": "8843083",
  "tag": "sha-8843083edb7f873cad1d1420731a60773594ffae",
}
`;

exports[`should throw because of empty strings 1`] = `
"Wrong environment variables
required \\"GITHUB_SHA\\": \\" \\" should not be an empty string
required \\"GITHUB_REF\\": \\" \\" should not be an empty string
required \\"GITHUB_JOB\\": \\" \\" should not be an empty string
required \\"GITHUB_RUN_ID\\": \\" \\" should not be an empty string
required \\"GITHUB_REPOSITORY\\": \\" \\" should not be an empty string
required \\"SOCIALGOUV_BASE_DOMAIN\\": \\" \\" should not be an empty string
"
`;
